tests/e2e/semantics/foreach_invalid2.error
Error: syntax error in story at line 3, column 9

3|    foreach "foo" as elem
              ^^^^^

E0106: `foreach` requires an iterable type, but `string` is not
