tests/e2e/semantics/foreach_invalid2.story
b = 0

foreach "foo" as elem
    b = b + elem
